--- a/Activity1.HTML
+++ b/Activity1.HTML
@@ -7,8 +7,7 @@
   </html>
 
   <body>
-    Welcome to codingal...
-    CODE CODE CODE!!!
+    <h1>Welcome to codingal... CODE CODE CODE!!!</h1>
   </body>
 
 
