--- a/Activity2.HTML
+++ b/Activity2.HTML
@@ -5,11 +5,13 @@
 <!--Add title to the web page-->
     <title>HTML STRUCTURE</title>
 
-</html>
+</head>
 
 <body>
-    This is how we add comments to HTML
+    Whatever you want to put here idk.
+
 </body>
 
  <!--You can define the used tag in comments section and it is not-->
 </html>
+
