--- a/index.HTML
+++ b/index.HTML
@@ -6,7 +6,7 @@
         </Head>
         
         <body>
-            web page content goes here.
+            EROR CODE 404
         </body>
 
     </html>
