LESSON1 (activity1.html)

--- a/MODULE2/LESSON 12/activity2.html
+++ b/MODULE2/LESSON 12/activity2.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         div {
-            background-color: 4CAF50;
+            background-color: #46ff00;
             padding: 10px;
         }
 
