--- a/MODULE2/LESSON9/Activity1.html
+++ b/MODULE2/LESSON9/Activity1.html
@@ -4,8 +4,7 @@
     <style>
         .text1 {
             color: red;
-
-            fontsize: 30px;
+            font-size: 30px;
         }
 
         .p1 {
