LESSON 3 (activity3.html)

--- a/MODULE3/lesson2/activity3.html
+++ b/MODULE3/lesson2/activity3.html
@@ -32,7 +32,7 @@
     </pre>
     <h1>Keyboard inputs</h1>
     <p>To indicate input that is typically entered via the keyboard, use the kbd element:</p>
-    <p>Use <kbd>ctrl + p</kbd> to open the Print dialog box.</p>
+    <p>Use <kbd>alt + f4</kbd> to open the Print dialog box.</p>
 </div>
 <input type="color" name="" id="">
 </body>
