--- a/MODULE4/homework/cascadingEffect.html
+++ b/MODULE4/homework/cascadingEffect.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cascading Effect Without Pagination</title>
+  <title>Cascading Effect</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     /* Base style for elements */
