--- a/MODULE4/homework/test.html
+++ b/MODULE4/homework/test.html
@@ -3,24 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Pagination</title>
+  <title>Hobby Section</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
   <div class="container mt-5">
-    <h2>Pagination Example</h2>
-    <!-- Simple Pagination with Previous and Next -->
-    <nav>
-      <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
-    </nav>
+    <h2>My Hobbies</h2>
+    <p>Here are some of my hobbies:</p>
+    
+    <ul>
+      <li>Reading books</li>
+      <li>Traveling to new places</li>
+      <li>Cooking new recipes</li>
+    </ul>
   </div>
 
   <!-- Bootstrap JS -->
