lesson1 (activity3.html)

--- a/MODULE4/lesson6/activity1.html
+++ b/MODULE4/lesson6/activity1.html
@@ -11,6 +11,7 @@
     <p>This is the technology section.</p>
     <script>
         var text = document.getElementById("one").innerHTML;
+        alert ("the first heading is " +text)
     </script>
 </body>
 </html>
