--- a/MODULE4/homework/accessing values with HTML DOM structure.html
+++ b/MODULE4/homework/accessing values with HTML DOM structure.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title id="demo">DOM Structure</title>
+        <title id="file">DOM Structure</title>
     </head>
     <body>
         <p>Adding JS as seperate file and assigning value from one node to other</p>
-        <button type="button" onclick="myFunction()">Click Me!</button>
+        <button type="button" onclick="myFunction()"><input type="file" accept=""></button>
         
         <p id="result"></p>
         <p id="result1"></p>
 
         <script src="accessing values with HTML DOM structure.js">
         </script>
-    </body>
+
+<br><br>
+<input type="file" accept=".png">
+<input type="file" accept=".PDF">
+<input type="file" accept=".doc">
+<br><br>
+</body>
 </html>
